@@ -1,0 +1,1 @@
+constinit const int x;
