@@ -71,6 +71,7 @@ The characters are:
 + `u` = `maybe_unused` or `unsigned`
 + `v` = `virtual`, `void`, or `volatile`
 + `w` = `wchar_t`
++ `xi` = `constinit`
 + `xx` = `constexpr`
 + `y` = `final`
 + `z` = `_Complex` or `size_t`
