@@ -1,0 +1,1 @@
+cdecl @ @ -xc++ @ explain constinit int f() @ 65
